# copypaste

./: .gitignore  README.md  setup.cfg  setup.py  train.py
copypaste/: __init__.py  data.py  losses.py  models.py  transforms.py  utils.py
