[metadata]
name = copypaste
version = 0.0.1
author = Jake Pencharz
author_email = jake.pencharz@bayer.com
description = Copy Paste For Semi Supervised Representation Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jake-Jay/copypaste
project_urls =
    Bug Tracker = https://github.com/Jake-Jay/copypaste/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch
    numpy

[options.packages.find]
where = src